# EvoSeq

./: .gitignore  README.md  evoseq.example.toml  pyproject.toml
doc/: preprocessing.md  release.md  scoring.md
evoseq/: __init__.py  cli.py  config.py  paths.py
evoseq/preprocess/: __init__.py  discovery.py  export.py  fasta.py  manifest.py  pipeline.py  validation.py  variant.py
evoseq/scoring/: __init__.py  environment.py  evo2_model.py  export.py  perbase.py  pipeline.py
examples/: 01_preprocessing.py  02_perbase_logprobs.py  03_score_pairs.py  04_run_from_config.py  README.md
tests/: test_preprocess_and_score.py
