[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evoseq"
version = "0.3.2"
description = "Genome analysis toolkit powered by Evo"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Hideaki Mizoue" },
]
requires-python = ">=3.10"
keywords = ["bioinformatics", "genomics", "evo2", "variant-scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "biopython>=1.85",
    "tqdm>=4.66",
]

[project.scripts]
evoseq-run = "evoseq.cli:main"

[project.optional-dependencies]
evo2 = [
    "evo2",
    "torch",
]

[project.urls]
Homepage = "https://github.com/mizomizo1/EvoSeq"
Repository = "https://github.com/mizomizo1/EvoSeq"
Issues = "https://github.com/mizomizo1/EvoSeq/issues"

[tool.setuptools.packages.find]
include = ["evoseq*"]
